--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
   "author": "Adfinis SyGroup AG <info@adfinis-sygroup.ch>",
   "license": "AGPL-3.0",
   "devDependencies": {
-    "@html-next/vertical-collection":
-      "github:html-next/vertical-collection#5c4fc6b18c75ec161eee39622dd0c068bff735f2",
+    "@html-next/vertical-collection": "github:html-next/vertical-collection#5c4fc6b18c75ec161eee39622dd0c068bff735f2",
     "babel-eslint": "^8.0.1",
     "babel-plugin-transform-async-to-generator": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
@@ -26,9 +25,9 @@
     "babel-preset-env": "^1.6.1",
     "broccoli-asset-rev": "^2.4.5",
     "downloadjs": "^1.4.7",
-    "ember-adcssy": "^1.2.1",
-    "ember-ajax": "^3.0.0",
-    "ember-basic-dropdown": "^1.0.2",
+    "ember-adcssy": "^1.2.2",
+    "ember-ajax": "~4.0.0",
+    "ember-basic-dropdown": "^1.0.4",
     "ember-can": "^1.1.1",
     "ember-changeset": "^1.5.0",
     "ember-changeset-validations": "^1.3.1",
@@ -43,13 +42,13 @@
     "ember-cli-htmlbars": "^3.0.0",
     "ember-cli-htmlbars-inline-precompile": "^0.4.4",
     "ember-cli-inject-live-reload": "^1.4.1",
-    "ember-cli-mirage": "^0.3.4",
+    "ember-cli-mirage": "~0.4.0",
     "ember-cli-mocha": "^0.15.0",
     "ember-cli-moment-shim": "^3.5.0",
     "ember-cli-nouislider": "^1.0.0",
-    "ember-cli-postcss": "^4.0.0",
+    "ember-cli-postcss": "^4.0.1",
     "ember-cli-release": "^1.0.0-beta.2",
-    "ember-cli-sass": "^7.0.0",
+    "ember-cli-sass": "^8.0.1",
     "ember-cli-shims": "^1.1.0",
     "ember-cli-sri": "^2.1.0",
     "ember-cli-test-loader": "^2.1.0",
@@ -64,7 +63,7 @@
     "ember-load-initializers": "^1.0.0",
     "ember-math-helpers": "^2.2.3",
     "ember-maybe-import-regenerator": "^0.1.6",
-    "ember-mocha": "^0.12.0",
+    "ember-mocha": "^0.14.0",
     "ember-moment": "^7.4.1",
     "ember-native-dom-helpers": "^0.6.1",
     "ember-notify": "^5.2.1",
@@ -72,21 +71,21 @@
     "ember-pad": "^1.2.2",
     "ember-parachute": "^0.3.5",
     "ember-power-calendar": "^0.7.3",
-    "ember-power-select": "^1.9.11",
+    "ember-power-select": "^2.0.9",
     "ember-resolver": "^5.0.1",
     "ember-responsive": "^2.0.5",
     "ember-route-action-helper": "^2.0.6",
     "ember-scrollable": "^0.5.0",
-    "ember-simple-auth": "^1.4.0",
+    "ember-simple-auth": "~1.7.0",
     "ember-site-tour": "^1.1.0",
     "ember-source": "~3.0.0",
     "ember-test-selectors": "^1.0.0",
     "ember-tether": "^1.0.0-beta.0",
-    "ember-truth-helpers": "^2.0.0",
+    "ember-truth-helpers": "^2.1.0",
     "ember-validated-form": "^0.6.0",
     "ember-wormhole": "^0.5.2",
-    "eslint-config-prettier": "^2.6.0",
-    "eslint-plugin-ember": "^5.0.1",
+    "eslint-config-prettier": "^3.3.0",
+    "eslint-plugin-ember": "^6.1.0",
     "eslint-plugin-prettier": "^2.1.2",
     "intersection-observer": "^0.5.0",
     "loader.js": "^4.1.0",
@@ -94,9 +93,13 @@
     "postcss-cssnext": "^3.0.2",
     "postcss-import": "^12.0.0",
     "postcss-responsive-type": "^1.0.0",
-    "prettier": "^1.7.4"
+    "prettier": "^1.7.4",
+    "sass": "^1.15.2"
   },
   "greenkeeper": {
-    "ignore": ["ember-cli-htmlbars-inline-precompile", "ember-cli-mirage"]
+    "ignore": [
+      "ember-cli-htmlbars-inline-precompile",
+      "ember-cli-mirage"
+    ]
   }
 }
