--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "ember-can": "^1.1.1",
     "ember-changeset": "^1.5.0",
     "ember-changeset-validations": "^1.3.1",
-    "ember-cli": "~3.0.4",
+    "ember-cli": "~3.4.4",
     "ember-cli-app-version": "^3.2.0",
     "ember-cli-babel": "^6.6.0",
     "ember-cli-chai": "^0.5.0",
@@ -52,13 +52,14 @@
     "ember-cli-sri": "^2.1.0",
     "ember-cli-test-loader": "^2.1.0",
     "ember-cli-uglify-es": "^1.0.4",
+    "ember-cli-update": "^0.27.18",
     "ember-component-css": "^0.6.4",
     "ember-composable-helpers": "^2.0.3",
     "ember-concurrency": "^0.8.12",
-    "ember-data": "~3.0.0",
+    "ember-data": "~3.4.4",
     "ember-export-application-global": "^2.0.0",
     "ember-fetch": "^5.1.1",
-    "ember-font-awesome": "^3.0.5",
+    "ember-font-awesome": "^3.1.1",
     "ember-load-initializers": "^1.0.0",
     "ember-math-helpers": "^2.2.3",
     "ember-maybe-import-regenerator": "^0.1.6",
@@ -76,11 +77,11 @@
     "ember-scrollable": "^0.5.0",
     "ember-simple-auth": "~1.7.0",
     "ember-site-tour": "^2.0.1",
-    "ember-source": "~3.0.0",
+    "ember-source": "~3.4.7",
     "ember-test-selectors": "^2.0.0",
     "ember-tether": "^1.0.0-beta.0",
     "ember-truth-helpers": "^2.1.0",
-    "ember-validated-form": "^0.6.0",
+    "ember-validated-form": "^0.7.1",
     "ember-wormhole": "^0.5.2",
     "eslint-config-prettier": "^3.3.0",
     "eslint-plugin-ember": "^6.1.0",
@@ -88,8 +89,8 @@
     "intersection-observer": "^0.5.0",
     "loader.js": "^4.1.0",
     "pagination-pager": "^3.1.0",
-    "postcss-cssnext": "^3.0.2",
     "postcss-import": "^12.0.0",
+    "postcss-preset-env": "^6.5.0",
     "postcss-responsive-type": "^1.0.0",
     "prettier": "^1.7.4",
     "sass": "^1.15.2"
