--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "timed",
   "version": "0.12.1",
   "description": "A time tracking software written in Ember.js",
+  "repository": "https://github.com/adfinis-sygroup/timed-frontend",
+  "license": "AGPL-3.0",
+  "author": "Adfinis SyGroup AG <info@adfinis-sygroup.ch>",
   "directories": {
     "test": "tests"
   },
@@ -10,39 +13,35 @@
     "start": "ember server --proxy http://localhost:8000",
     "test": "ember test"
   },
-  "repository": "https://github.com/adfinis-sygroup/timed-frontend",
   "engines": {
-    "node": "^4.5 || 6.* || >= 7.*"
+    "node": "8.* || >= 10.*"
   },
-  "author": "Adfinis SyGroup AG <info@adfinis-sygroup.ch>",
-  "license": "AGPL-3.0",
   "devDependencies": {
-    "@html-next/vertical-collection":
-      "github:html-next/vertical-collection#5c4fc6b18c75ec161eee39622dd0c068bff735f2",
+    "@html-next/vertical-collection": "github:html-next/vertical-collection#5c4fc6b18c75ec161eee39622dd0c068bff735f2",
     "babel-eslint": "^8.0.1",
     "babel-plugin-transform-async-to-generator": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-env": "^1.6.1",
-    "broccoli-asset-rev": "^2.4.5",
+    "broccoli-asset-rev": "^3.0.0",
     "downloadjs": "^1.4.7",
     "ember-adcssy": "^1.2.1",
-    "ember-ajax": "^3.0.0",
+    "ember-ajax": "^5.0.0",
     "ember-basic-dropdown": "^1.0.2",
     "ember-can": "^1.1.1",
     "ember-changeset": "^1.5.0",
     "ember-changeset-validations": "^1.3.1",
-    "ember-cli": "~2.18.0",
+    "ember-cli": "~3.12.0",
     "ember-cli-app-version": "^3.2.0",
-    "ember-cli-babel": "^6.6.0",
+    "ember-cli-babel": "^7.7.3",
     "ember-cli-chai": "^0.5.0",
     "ember-cli-chart": "^3.4.0",
     "ember-cli-code-coverage": "^0.4.2",
-    "ember-cli-dependency-checker": "^3.0.0",
-    "ember-cli-eslint": "^5.0.0",
-    "ember-cli-htmlbars": "^3.0.0",
-    "ember-cli-htmlbars-inline-precompile": "^0.4.4",
-    "ember-cli-inject-live-reload": "^1.4.1",
+    "ember-cli-dependency-checker": "^3.1.0",
+    "ember-cli-eslint": "^5.1.0",
+    "ember-cli-htmlbars": "^3.0.1",
+    "ember-cli-htmlbars-inline-precompile": "^2.1.0",
+    "ember-cli-inject-live-reload": "^1.8.2",
     "ember-cli-mirage": "^0.3.4",
     "ember-cli-mocha": "^0.15.0",
     "ember-cli-moment-shim": "^3.5.0",
@@ -50,18 +49,18 @@
     "ember-cli-postcss": "^4.0.0",
     "ember-cli-release": "^1.0.0-beta.2",
     "ember-cli-sass": "^7.0.0",
-    "ember-cli-shims": "^1.1.0",
-    "ember-cli-sri": "^2.1.0",
+    "ember-cli-sri": "^2.1.1",
     "ember-cli-test-loader": "^2.1.0",
     "ember-cli-uglify-es": "^1.0.4",
+    "ember-cli-update": "^0.46.0",
     "ember-component-css": "^0.6.4",
     "ember-composable-helpers": "^2.0.3",
     "ember-concurrency": "^0.8.12",
-    "ember-data": "~2.18.0",
+    "ember-data": "~3.12.0",
     "ember-export-application-global": "^2.0.0",
     "ember-fetch": "^5.1.1",
     "ember-font-awesome": "^3.0.5",
-    "ember-load-initializers": "^1.0.0",
+    "ember-load-initializers": "^2.0.0",
     "ember-math-helpers": "^2.2.3",
     "ember-maybe-import-regenerator": "^0.1.6",
     "ember-mocha": "^0.12.0",
@@ -73,30 +72,36 @@
     "ember-parachute": "^0.3.5",
     "ember-power-calendar": "^0.7.3",
     "ember-power-select": "^1.9.11",
+    "ember-qunit": "^4.4.1",
     "ember-resolver": "^5.0.1",
     "ember-responsive": "^2.0.5",
     "ember-route-action-helper": "^2.0.6",
     "ember-scrollable": "^0.5.0",
     "ember-simple-auth": "^1.4.0",
     "ember-site-tour": "^1.1.0",
-    "ember-source": "~2.18.0",
+    "ember-source": "~3.12.0",
     "ember-test-selectors": "^1.0.0",
     "ember-tether": "^1.0.0-beta.0",
     "ember-truth-helpers": "^2.0.0",
     "ember-validated-form": "^0.6.0",
     "ember-wormhole": "^0.5.2",
     "eslint-config-prettier": "^3.3.0",
-    "eslint-plugin-ember": "^5.0.1",
+    "eslint-plugin-ember": "^6.2.0",
+    "eslint-plugin-node": "^9.0.1",
     "eslint-plugin-prettier": "^2.1.2",
     "intersection-observer": "^0.5.0",
-    "loader.js": "^4.1.0",
+    "loader.js": "^4.7.0",
     "pagination-pager": "^3.1.0",
     "postcss-cssnext": "^3.0.2",
     "postcss-import": "^12.0.0",
     "postcss-responsive-type": "^1.0.0",
-    "prettier": "^1.7.4"
+    "prettier": "^1.7.4",
+    "qunit-dom": "^0.8.4"
   },
   "greenkeeper": {
-    "ignore": ["ember-cli-htmlbars-inline-precompile", "ember-cli-mirage"]
+    "ignore": [
+      "ember-cli-htmlbars-inline-precompile",
+      "ember-cli-mirage"
+    ]
   }
 }
