--- a/package.json
+++ b/package.json
@@ -14,22 +14,21 @@
     "test": "ember test"
   },
   "engines": {
-    "node": "8.* || >= 10.*"
+    "node": "10.* || >= 12.*"
   },
   "devDependencies": {
     "@babel/plugin-proposal-object-rest-spread": "^7.4.0",
     "@ember/jquery": "^1.1.0",
     "@ember/optional-features": "^1.1.0",
-    "@html-next/vertical-collection": "github:html-next/vertical-collection#5c4fc6b18c75ec161eee39622dd0c068bff735f2",
-    "babel-eslint": "^8.0.1",
+    "@html-next/vertical-collection": "github:html-next/vertical-collection#4c787b2cd92ec6fd548b52c4e22d8e0e0d0b85d3",
+    "babel-eslint": "^8.0.0",
     "babel-plugin-transform-async-to-generator": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-env": "^1.6.1",
     "broccoli-asset-rev": "^3.0.0",
     "downloadjs": "^1.4.7",
-    "ember-adcssy": "^1.2.1",
     "ember-ajax": "^5.0.0",
-    "ember-basic-dropdown": "^2.0.0",
+    "ember-basic-dropdown": "^2.0.11",
     "ember-can": "^2.1.0",
     "ember-changeset": "^2.2.4",
     "ember-changeset-validations": "^2.2.1",
@@ -45,9 +44,8 @@
     "ember-cli-mirage": "^0.4.0",
     "ember-cli-moment-shim": "^3.5.0",
     "ember-cli-nouislider": "^1.1.0",
-    "ember-cli-postcss": "^4.0.0",
     "ember-cli-release": "^1.0.0-beta.2",
-    "ember-cli-sass": "^7.0.0",
+    "ember-cli-sass": "^10.0.0",
     "ember-cli-shims": "^1.2.0",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-test-loader": "^2.1.0",
@@ -57,9 +55,9 @@
     "ember-composable-helpers": "^3.0.2",
     "ember-concurrency": "^1.1.3",
     "ember-data": "~3.12.0",
-    "ember-export-application-global": "^2.0.0",
+    "ember-export-application-global": "^2.0.1",
     "ember-fetch": "^7.0.0",
-    "ember-font-awesome": "^4.0.0-rc.1",
+    "ember-font-awesome": "^3.1.1",
     "ember-load-initializers": "^2.1.1",
     "ember-math-helpers": "^2.7.0",
     "ember-maybe-import-regenerator": "^0.1.6",
@@ -69,15 +67,15 @@
     "ember-one-way-controls": "^3.0.1",
     "ember-pad": "^1.2.3",
     "ember-parachute": "^1.0.2",
-    "ember-power-calendar": "^0.14.0",
+    "ember-power-calendar": "^0.13.3",
     "ember-power-calendar-moment": "^0.1.7",
-    "ember-power-select": "^3.0.5",
+    "ember-power-select": "^2.3.4",
     "ember-qunit": "^4.6.0",
-    "ember-resolver": "^5.0.1",
+    "ember-resolver": "^7.0.0",
     "ember-responsive": "^3.0.5",
     "ember-route-action-helper": "^2.0.7",
-    "ember-scrollable": "^0.5.0",
-    "ember-simple-auth": "^2.1.0",
+    "ember-scrollable": "^0.5.3",
+    "ember-simple-auth": "^2.1.1",
     "ember-site-tour": "^2.2.0",
     "ember-source": "~3.12.0",
     "ember-test-selectors": "^3.0.0",
@@ -92,11 +90,10 @@
     "intersection-observer": "^0.5.0",
     "loader.js": "^4.7.0",
     "pagination-pager": "^3.2.0",
-    "postcss-cssnext": "^3.0.2",
-    "postcss-import": "^12.0.0",
-    "postcss-responsive-type": "^1.0.0",
     "prettier": "^1.7.4",
-    "qunit-dom": "^0.8.4"
+    "qunit-dom": "^0.8.4",
+    "sass": "^1.24.2",
+    "typeface-source-sans-pro": "^0.0.75"
   },
   "greenkeeper": {
     "ignore": [
