--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "broccoli-asset-rev": "^3.0.0",
     "downloadjs": "^1.4.7",
     "ember-ajax": "^5.0.0",
+    "ember-auto-import": "^1.5.3",
     "ember-basic-dropdown": "^2.0.11",
     "ember-can": "^2.1.0",
     "ember-changeset": "^2.2.4",
@@ -41,7 +42,7 @@
     "ember-cli-eslint": "^5.1.0",
     "ember-cli-htmlbars": "^4.2.0",
     "ember-cli-inject-live-reload": "^1.8.2",
-    "ember-cli-mirage": "^0.4.0",
+    "ember-cli-mirage": "^1.1.6",
     "ember-cli-moment-shim": "^3.5.0",
     "ember-cli-nouislider": "^1.1.0",
     "ember-cli-release": "^1.0.0-beta.2",
@@ -87,6 +88,7 @@
     "eslint-plugin-ember": "^6.2.0",
     "eslint-plugin-node": "^9.0.1",
     "eslint-plugin-prettier": "^2.1.2",
+    "faker": "^4.1.0",
     "intersection-observer": "^0.5.0",
     "loader.js": "^4.7.0",
     "pagination-pager": "^3.2.0",
