--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "ember-cli-app-version": "^3.2.0",
     "ember-cli-babel": "^7.13.2",
     "ember-cli-chart": "^3.5.0",
-    "ember-cli-code-coverage": "^0.4.2",
+    "ember-cli-code-coverage": "^1.0.0-beta.8",
     "ember-cli-dependency-checker": "^3.1.0",
     "ember-cli-eslint": "^5.1.0",
     "ember-cli-htmlbars": "^4.2.0",
