--- a/package.json
+++ b/package.json
@@ -19,14 +19,14 @@
     "node": "10.* || >= 12.*"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-object-rest-spread": "^7.4.0",
+    "@babel/plugin-proposal-decorators": "^7.8.3",
+    "@babel/plugin-proposal-object-rest-spread": "^7.8.3",
+    "@babel/plugin-transform-async-to-generator": "^7.8.3",
+    "@babel/preset-env": "^7.8.3",
     "@ember/jquery": "^1.1.0",
     "@ember/optional-features": "^1.1.0",
     "@html-next/vertical-collection": "github:html-next/vertical-collection#4c787b2cd92ec6fd548b52c4e22d8e0e0d0b85d3",
-    "babel-eslint": "^8.0.0",
-    "babel-plugin-transform-async-to-generator": "^6.24.1",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-preset-env": "^1.6.1",
+    "babel-eslint": "^10.0.3",
     "broccoli-asset-rev": "^3.0.0",
     "downloadjs": "^1.4.7",
     "ember-ajax": "^5.0.0",
@@ -40,7 +40,7 @@
     "ember-cli-babel": "^7.13.2",
     "ember-cli-chart": "^3.5.0",
     "ember-cli-code-coverage": "^1.0.0-beta.8",
-    "ember-cli-dependency-checker": "^3.1.0",
+    "ember-cli-dependency-checker": "^3.2.0",
     "ember-cli-eslint": "^5.1.0",
     "ember-cli-htmlbars": "^4.2.0",
     "ember-cli-inject-live-reload": "^1.8.2",
