--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,20 @@
-python-dateutil==2.8.0
-django==1.11.22 # pyup: >=1.11,<1.12
-django-auth-ldap==1.7.0
-django-filter==2.1.0
-django-multiselectfield==0.1.8
-djangorestframework==3.9.4
+python-dateutil==2.8.1
+django==2.2.10 # pyup: <3.0
+django-auth-ldap==2.1.0
+django-filter==2.2.0
+django-multiselectfield==0.1.11
+djangorestframework==3.11.0
 djangorestframework-jwt==1.11.0
-djangorestframework-jsonapi==2.7.0
-psycopg2-binary==2.8.2
-pytz==2019.1
+djangorestframework-jsonapi==3.0.0
+psycopg2-binary==2.8.4
+pytz==2019.3
 pyexcel-webio==0.1.4
-pyexcel-io==0.5.17
+pyexcel-io==0.5.20
 django-excel==0.0.10
 pyexcel-ods3==0.5.3
-pyexcel-xlsx==0.5.7
+pyexcel-xlsx==0.5.8
 pyexcel-ezodf==0.3.4
 django-environ==0.4.5
-django-money==0.14.4
+django-money==1.0
 python-redmine==2.2.1
 uwsgi==2.0.18
