--- a/.isort.cfg
+++ b/.isort.cfg
@@ -1,6 +1,7 @@
 [settings]
 skip=migrations,snapshots
 known_first_party=timed
+known_third_party=pytest_factoryboy
 multi_line_output=3
 include_trailing_comma=True
 force_grid_wrap=0
