--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -17,6 +17,7 @@ pytest==5.3.5
 pytest-cov==2.8.1
 pytest-django==3.8.0
 pytest-env==0.6.2
+pytest-factoryboy==2.0.3
 pytest-freezegun==0.4.1
 pytest-mock==2.0.0
 pytest-randomly==3.2.1
