--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,10 @@
 python-dateutil==2.8.1
 django==2.2.10 # pyup: <3.0
 django-auth-ldap==2.1.0
-django-filter==2.2.0
 django-multiselectfield==0.1.11
 djangorestframework==3.11.0
 djangorestframework-simplejwt==4.4.0
-djangorestframework-jsonapi==3.0.0
+djangorestframework-jsonapi[django-filter]==3.0.0
 psycopg2-binary==2.8.4
 pytz==2019.3
 pyexcel-webio==0.1.4
