--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -8,7 +8,7 @@ flake8-debugger==3.2.1
 flake8-deprecated==1.3
 flake8-docstrings==1.5.0
 flake8-isort==2.8.0
-flake8-string-format==0.2.3
+flake8-string-format==0.3.0
 ipdb==0.12.3
 isort==4.3.21
 mockldap==0.3.0.post1
@@ -21,3 +21,4 @@ pytest-factoryboy==2.0.3
 pytest-freezegun==0.4.1
 pytest-mock==2.0.0
 pytest-randomly==3.2.1
+snapshottest==0.5.1
