--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.13.2",
   "description": "A time tracking software written in Ember.js",
   "repository": "https://github.com/adfinis-sygroup/timed-frontend",
-  "author": "Adfinis SyGroup AG <info@adfinis-sygroup.ch>",
+  "author": "Adfinis AG <info@adfinis.com>",
   "license": "AGPL-3.0",
   "directories": {
     "test": "tests"
