--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "ember-route-action-helper": "^2.0.7",
     "ember-scrollable": "^1.0.0",
     "ember-simple-auth": "^2.1.1",
+    "ember-simple-auth-oidc": "^2.0.0",
     "ember-site-tour": "^2.2.0",
     "ember-source": "~3.12.0",
     "ember-test-selectors": "^3.0.0",
