--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "timed",
-  "version": "0.13.2",
+  "version": "1.0-rc1",
   "description": "A time tracking software written in Ember.js",
   "repository": "https://github.com/adfinis-sygroup/timed-frontend",
   "author": "Adfinis AG <info@adfinis.com>",
