--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -19,11 +19,42 @@ services:
       - timed.local
 
   frontend:
+    image: adfinissygroup/timed-frontend:latest
+    ports:
+      - 4200:80
     environment:
       - TIMED_SSO_CLIENT_HOST=http://timed.local/auth/realms/timed/protocol/openid-connect
       - TIMED_SSO_CLIENT_ID=timed-public
     networks:
       - timed.local
+
+  keycloak:
+    image: jboss/keycloak:10.0.1
+    volumes:
+      - ./dev-config/keycloak-config.json:/etc/keycloak/keycloak-config.json:ro
+    depends_on:
+      - db
+    environment:
+      - DB_VENDOR=postgres
+      - DB_ADDR=db
+      - DB_USER=timed
+      - DB_DATABASE=timed
+      - DB_PASSWORD=timed
+      - PROXY_ADDRESS_FORWARDING=true
+    command: ["-Dkeycloak.migration.action=import", "-Dkeycloak.migration.provider=singleFile", "-Dkeycloak.migration.file=/etc/keycloak/keycloak-config.json", "-b", "0.0.0.0"]
+    networks:
+      - timed.local
+
+  proxy:
+    image: nginx:1.17.10-alpine
+    ports:
+      - 80:80
+    volumes:
+      - ./dev-config/nginx.conf:/etc/nginx/conf.d/default.conf:ro
+    networks:
+      timed.local:
+        aliases:
+          - timed.local
 
   mailhog:
     image: mailhog/mailhog
