--- a/.github/workflows/release-image.yml
+++ b/.github/workflows/release-image.yml
@@ -1,4 +1,4 @@
-name: Release Container Image
+name: Release ghcr image
 
 on:
   push:
@@ -37,7 +37,7 @@ jobs:
 
       - name: Build and push
         id: docker_build_ghcr
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v3
         with:
           context: .
           file: ./Dockerfile
