--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "ember-event-helpers": "^0.1.1",
     "ember-export-application-global": "2.0.1",
     "ember-fetch": "8.1.2",
+    "ember-keyboard": "^8.2.0",
     "ember-load-initializers": "2.1.2",
     "ember-math-helpers": "2.18.2",
     "ember-maybe-import-regenerator": "1.0.0",
