--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "preinstall": "npx only-allow pnpm",
     "start": "ember server --proxy http://localhost:8000",
     "test": "npm-run-all test:*",
-    "test:ember": "ember test"
+    "test:ember": "ember test",
+    "semantic-release": "semantic-release"
   },
   "commitlint": {
     "extends": [
@@ -56,6 +57,8 @@
     "@glimmer/component": "1.1.2",
     "@glimmer/tracking": "1.1.2",
     "@html-next/vertical-collection": "4.0.2",
+    "@semantic-release/changelog": "^6.0.2",
+    "@semantic-release/git": "^10.0.1",
     "babel-eslint": "10.1.0",
     "broccoli-asset-rev": "3.0.0",
     "downloadjs": "1.4.7",
@@ -137,6 +140,7 @@
     "qunit": "2.19.4",
     "qunit-dom": "2.0.0",
     "sass": "1.58.3",
+    "semantic-release": "^20.1.1",
     "tracked-built-ins": "3.1.1",
     "tracked-toolbox": "2.0.0",
     "webpack": "5.75.0"
