--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@semantic-release/git": "^10.0.1",
     "babel-eslint": "10.1.0",
     "broccoli-asset-rev": "3.0.0",
+    "broccoli-funnel": "^3.0.8",
     "downloadjs": "1.4.7",
     "ember-auto-import": "2.6.0",
     "ember-basic-dropdown": "7.0.0",
