--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,11 +3,11 @@ name: Test
 on:
   push:
     branches:
-      - master
+      - main
       - renovate/**
   pull_request:
     branches:
-      - master
+      - main
 
 env:
   NODE_VERSION: 16
