--- a/package.json
+++ b/package.json
@@ -148,7 +148,7 @@
     "webpack": "5.76.2"
   },
   "engines": {
-    "node": ">=16.*"
+    "node": ">= 18"
   },
   "ember": {
     "edition": "octane"
