--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,6 +45,7 @@ python-redmine = "^2.3.0"
 sentry-sdk = "^1.9.5"
 whitenoise = "^6.2.0"
 django-hurricane = "^1.3.4"
+openpyxl = "3.0.10" # TODO: dependency of `pyexcel-xlsx` Remove as soon as https://github.com/pyexcel/pyexcel-xlsx/issues/52 is resolved.
 
 [tool.poetry.dev-dependencies]
 black = "22.3.0"
