--- a/package.json
+++ b/package.json
@@ -135,6 +135,7 @@
     "husky": "8.0.3",
     "lint-staged": "13.1.2",
     "loader.js": "4.7.0",
+    "miragejs": "^0.1.47",
     "npm-run-all": "4.1.5",
     "prettier": "2.8.8",
     "qunit": "2.19.4",
