--- a/package.json
+++ b/package.json
@@ -107,7 +107,6 @@
     "ember-resolver": "8.0.3",
     "ember-resources": "5.6.2",
     "ember-responsive": "5.0.0",
-    "ember-scrollable": "1.0.2",
     "ember-shepherd": "^14.0.2",
     "ember-simple-auth": "4.2.2",
     "ember-simple-auth-oidc": "5.1.0",
@@ -137,9 +136,11 @@
     "prettier": "2.8.8",
     "qunit": "2.19.4",
     "qunit-dom": "2.0.0",
+    "resize-observer-polyfill": "^1.5.1",
     "sass": "1.58.3",
     "semantic-release": "21.0.7",
     "shepherd.js": "^11.1.1",
+    "simplebar": "^6.2.5",
     "tracked-built-ins": "3.1.1",
     "tracked-toolbox": "2.0.0",
     "webpack": "5.76.2"
@@ -159,6 +160,9 @@
         "@babel/core",
         "@glint/template",
         "@types/node"
+      ],
+      "allowAny": [
+        "marked"
       ]
     }
   }
